--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.9.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.26.0",
+    "remixicon": "^4.3.0",
     "swiper": "^11.1.9",
     "yup": "^1.4.0"
   },
