--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@types/react-redux": "^7.1.33",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-query": "^3.39.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "redux": "^5.0.1",
     "remixicon": "^4.3.0",
     "swiper": "^11.1.9",
     "yup": "^1.4.0"
